force-app/main/default/objects/Product2/fields/External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Id__c</fullName>
    <externalId>true</externalId>
    <label>External System Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>