force-app/main/default/objects/Product2/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Parts</relationshipLabel>
    <relationshipName>ParentProduct</relationshipName>
    <type>Lookup</type>
</CustomField>