force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Fryer</fullName>
            </value>
            <value>
                <fullName>Air Fryer Toaster Oven</fullName>
            </value>
            <value>
                <fullName>Air Mattress</fullName>
            </value>
            <value>
                <fullName>Air Pump</fullName>
            </value>
            <value>
                <fullName>Air Purifier</fullName>
            </value>
            <value>
                <fullName>Air Purifier Filter</fullName>
            </value>
            <value>
                <fullName>All products</fullName>
            </value>
            <value>
                <fullName>Automatic Pets Feeders</fullName>
            </value>
            <value>
                <fullName>Blood Pressure Monitor</fullName>
            </value>
            <value>
                <fullName>Body Fat Scale</fullName>
            </value>
            <value>
                <fullName>Body Weight Scale</fullName>
            </value>
            <value>
                <fullName>Camping Lantern</fullName>
            </value>
            <value>
                <fullName>Coffe Grinder</fullName>
            </value>
            <value>
                <fullName>Coffee Maker</fullName>
            </value>
            <value>
                <fullName>Coffee Warmer</fullName>
            </value>
            <value>
                <fullName>Electric Kettle</fullName>
            </value>
            <value>
                <fullName>Electric Toothbrush</fullName>
            </value>
            <value>
                <fullName>Fitness Tracker</fullName>
            </value>
            <value>
                <fullName>Food Dehydrator</fullName>
            </value>
            <value>
                <fullName>Foot Massager</fullName>
            </value>
            <value>
                <fullName>Gooseneck Kettle</fullName>
            </value>
            <value>
                <fullName>Humidifier</fullName>
            </value>
            <value>
                <fullName>Hygrothermograph</fullName>
            </value>
            <value>
                <fullName>Indoor Grill</fullName>
            </value>
            <value>
                <fullName>Kitchen Scale</fullName>
            </value>
            <value>
                <fullName>Luggage Scale</fullName>
            </value>
            <value>
                <fullName>Massager</fullName>
            </value>
            <value>
                <fullName>Multimeter</fullName>
            </value>
            <value>
                <fullName>Nutrition Scales</fullName>
            </value>
            <value>
                <fullName>Outdoor Remote Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>